# libnss-pgsql

./: CMakeLists.txt
conf/: CMakeLists.txt
doc/: CMakeLists.txt
src/: CMakeLists.txt  backend.c
